# corona-auto-georeferencing

./: README.md
agisoft_automation/: main.py  pyproject.toml
coordinate_matching/: pyproject.toml
