[project]
name = "agisoft-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
  # Windows x86_64
  "metashape @ https://download.agisoft.com/metashape-2.3.1-cp39.cp310.cp311.cp312.cp313-none-win_amd64.whl; sys_platform == 'win32' and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
  # macOS arm64
  "metashape @ https://download.agisoft.com/metashape-2.3.1-cp39.cp310.cp311.cp312.cp313-abi3-macosx_11_0_universal2.macosx_10_13_x86_64.whl; sys_platform == 'darwin' and platform_machine == 'arm64'",
  # macOS x86_64
  "metashape @ https://download.agisoft.com/metashape-2.3.1-cp39.cp310.cp311.cp312.cp313-abi3-macosx_11_0_universal2.macosx_10_13_x86_64.whl; sys_platform == 'darwin' and platform_machine == 'x86_64'",
  # Linux x86_64
  "metashape @ https://download.agisoft.com/metashape-2.3.1-cp39.cp310.cp311.cp312.cp313-abi3-linux_x86_64.whl; sys_platform == 'linux' and platform_machine == 'x86_64'",
]